# akari_mcp_server

./: LICENSE  README.md  pyproject.toml
.claude/hooks/: voicevox_speak.sh
src/akari_mcp_server/: helpers.py  server.py
src/akari_mcp_server/tools/: _device_lock.py  camera.py  display.py  gpio.py  motor.py  video.py
