[project]
name = "akari-mcp-server"
version = "0.1.0"
description = "MCP Server for AKARI robot control"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "depthai==2.30.0.0",
    "opencv-python",
]

[project.scripts]
akari-mcp-server = "akari_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akari_mcp_server"]

[tool.uv.sources]
akari-client = { path = "/home/kaz/akari_software/sdk/akari_client", editable = true }

[dependency-groups]
dev = [
    "akari-client[grpc]",
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 88
